<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <include
        android:id="@+id/bottom_nav_container"
        layout="@layout/layout_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#FFFFFF"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/feed_title"
        app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/main_TIL_search_vibe"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/feed_search_hint"
        app:endIconContentDescription="@string/feed_search_apply"
        app:endIconDrawable="@drawable/ic_search"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_ET_search_vibe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/main_switch_match_palette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/feed_sheet_palette_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_TIL_search_vibe" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_RV_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_container"
        app:layout_constraintTop_toBottomOf="@id/main_switch_match_palette"
        tools:listitem="@layout/item_outfit" />

</androidx.constraintlayout.widget.ConstraintLayout>
