<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_nav_height"
    android:background="@drawable/bg_bottom_nav"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/bottom_nav_padding_horizontal"
    android:paddingEnd="@dimen/bottom_nav_padding_horizontal">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="@dimen/bottom_nav_icon_size"
            android:layout_height="@dimen/bottom_nav_icon_size"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/feed_title"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/nav_ic_home"
            app:tint="@color/nav_icon_tint" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_favorites"
            android:layout_width="@dimen/bottom_nav_icon_size"
            android:layout_height="@dimen/bottom_nav_icon_size"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/favorites_empty"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/nav_ic_favorites"
            app:tint="@color/nav_icon_tint" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_profile"
            android:layout_width="@dimen/bottom_nav_icon_size"
            android:layout_height="@dimen/bottom_nav_icon_size"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/profile_title"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/nav_ic_profile"
            app:tint="@color/nav_icon_tint" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btn_add_outfit"
            android:layout_width="@dimen/bottom_nav_icon_size"
            android:layout_height="@dimen/bottom_nav_icon_size"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/label_vibe"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/nav_ic_add"
            app:tint="@color/nav_icon_tint" />
    </FrameLayout>

</LinearLayout>
